src/base.css
* {
  box-sizing: border-box;
}
:root {
  --black: #000000;
  --primary: #a06be0;
  --gray: #999;
  --white: #eceff1;
  background: var(--black);
  color: var(--white);

  /* --sans: "Archivo", sans-serif; */
  --mono: "Inconsolata", monospace;
  --serif: "Lora", serif;
  font: 20px var(--mono);
}

/* ===== layout ===== */
body {
  display: grid;
  grid: auto-flow / 1fr minmax(16rem, 35rem) 1fr;
  grid-gap: 0 1em;
  margin: 0 0 10vh 0;
}

body > * {
  grid-column: 2 / span 1;
}

body > picture,
body > .gist {
  grid-column: 1 / span 3;
}
picture img {
  width: 100%;
}

header {
  display: grid;
  grid: repeat(auto-fill, 10vmin) / repeat(auto-fill, 10vmin);
  grid-column: 1 / span 3;
  height: 60vh;
  margin: 10vh 2vw 0 2vw;
  place-content: center;
}
h1 {
  font: 700 5vmin var(--serif);
  grid-row: -2 / span 1;
}
h2 {
  font: 700 5vmin var(--serif);
  grid-row: -1 / span 1;
}
h3 {
  /* font: 4vmin var(--sans); */
  grid-area: 2 / 1 / 2 / -2;
  place-self: center end;
}
h4 {
  font: 700 2em var(--mono);
  margin: 1.5em 0 0.25em 0;
}
h5 {
  font: 700 1.5em var(--mono);
  margin: 1.5em 0 0.25em 0;
}
h6 {
  font: 700 1.25em var(--mono);
  margin: 1.5em 0 0.25em 0;
}
p {
  margin: 0 0 0.25em 0;
}

/* ===== style ===== */
a,
a:visited {
  color: inherit;
  font-weight: 700;
  text-decoration: underline;
}
a:hover {
  color: var(--primary);
  transition: color 0.16s;
}

header a,
header a:hover,
header a:visited {
  color: inherit;
  text-decoration: none;
}

ul {
  list-style: none;
  margin: 0;
}
ul > * {
  margin: 0.5em;
}
ul > li:before {
  content: "»";
  margin: 0 1ch 0 -3ch;
  position: absolute;
}

blockquote {
  margin: 1em;
  padding: 0.25em 1em;
  border-left: 1ch solid var(--gray);
}

/* dt {                          */
/*   font: 700 1em var(--serif); */
/*   margin: 0.75em 0 0.25em 0;  */
/* }                             */
/* dd {                          */
/*   font-style: italic;         */
/* }                             */
code {
    background: rgba(255, 255, 255, 255, 0.25)
    font: 1em var(--mono);
}

em,
mark {
  color: var(--primary);
  background-color: unset;
  font: 1em var(--mono);
}
time,
span {
  color: var(--gray);
}

